--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "dependencies": {
     "autoprefixer-loader": "3.2.0",
     "babel-core": "6.26.0",
-    "babel-loader": "7.1.1",
+    "babel-loader": "7.1.4",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-react-display-name": "6.25.0",
@@ -78,87 +78,89 @@
     "babel-register": "6.26.0",
     "babel-runtime": "6.26.0",
     "better-npm-run": "0.1.0",
-    "body-parser": "1.17.2",
+    "body-parser": "1.18.2",
     "classnames": "2.2.5",
-    "clean-webpack-plugin": "0.1.16",
-    "compression": "1.7.0",
-    "concurrently": "3.5.0",
-    "css-loader": "0.28.5",
-    "eslint-plugin-react": "^7.2.1",
+    "clean-webpack-plugin": "0.1.19",
+    "compression": "1.7.2",
+    "concurrently": "3.5.1",
+    "css-loader": "0.28.11",
     "exenv": "1.2.2",
-    "express": "4.15.4",
-    "extract-text-webpack-plugin": "3.0.0",
+    "express": "4.16.3",
+    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.11.2",
     "font-awesome": "4.7.0",
     "font-awesome-sass-loader": "2.0.1",
-    "hoist-non-react-statics": "2.2.2",
-    "invariant": "2.2.2",
+    "hoist-non-react-statics": "2.5.0",
+    "invariant": "2.2.4",
     "json-loader": "0.5.7",
-    "lodash": "4.17.4",
+    "lodash": "4.17.5",
     "lru-memoize": "1.0.2",
     "map-props": "1.0.0",
     "material-ui": "1.0.0-beta.22",
     "material-ui-icons": "1.0.0-beta.15",
     "md5": "2.2.1",
-    "moment": "2.18.1",
-    "multireducer": "3.1.0",
-    "normalizr": "3.2.3",
+    "moment": "2.22.0",
+    "multireducer": "3.1.1",
+    "normalizr": "3.2.4",
     "piping": "1.0.0-rc.4",
     "pretty-error": "2.1.1",
-    "prop-types": "15.5.10",
-    "qs": "6.5.0",
+    "prop-types": "15.6.1",
+    "qs": "6.5.1",
     "randomcolor": "0.5.3",
     "react": "15.6.1",
     "react-dom": "15.6.1",
-    "react-event-listener": "^0.5.0",
-    "react-ga": "2.2.0",
+    "react-event-listener": "0.5.3",
+    "react-ga": "2.4.1",
     "react-helmet": "5.2.0",
     "react-hot-loader": "next",
     "react-inline-css": "2.3.1",
-    "react-motion": "0.5.0",
-    "react-redux": "5.0.6",
+    "react-motion": "0.5.2",
+    "react-redux": "5.0.7",
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
-    "react-router-scroll": "0.4.2",
+    "react-router-scroll": "0.4.4",
     "react-stickynode": "1.3.1",
     "redux": "3.7.2",
     "redux-connect": "5.1.0",
-    "redux-responsive": "4.3.2",
+    "redux-responsive": "4.3.6",
     "redux-thunk": "2.2.0",
-    "resolve-url-loader": "2.1.0",
-    "sass-loader": "6.0.6",
+    "resolve-url-loader": "2.3.0",
+    "sass-loader": "6.0.7",
     "serialize-javascript": "1.4.0",
-    "serve-favicon": "2.4.3",
-    "style-loader": "0.18.2",
-    "superagent": "3.5.2",
+    "serve-favicon": "2.5.0",
+    "style-loader": "0.20.3",
+    "superagent": "3.8.2",
     "url-loader": "0.5.9",
     "warning": "3.0.0",
-    "webpack-isomorphic-tools": "3.0.3"
+    "webpack-isomorphic-tools": "3.0.5"
   },
   "devDependencies": {
-    "babel-eslint": "7.2.3",
-    "babel-plugin-react-transform": "2.0.2",
+    "babel-eslint": "8.2.2",
+    "babel-plugin-react-transform": "3.0.0",
     "babel-plugin-typecheck": "3.9.0",
     "bootstrap-sass": "3.3.7",
-    "eslint": "4.4.1",
-    "eslint-config-react-app": "2.0.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.35.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "node-sass": "4.5.3",
-    "prettier-eslint": "6.4.2",
-    "prettier-eslint-cli": "4.2.1",
+    "eslint": "4.19.1",
+    "eslint-config-react-app": "2.1.0",
+    "eslint-loader": "2.0.0",
+    "eslint-plugin-flowtype": "2.46.1",
+    "eslint-plugin-import": "2.10.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-react": "7.7.0",
+    "node-sass": "4.8.3",
+    "prettier": "1.11.1",
+    "prettier-eslint": "8.8.1",
+    "prettier-eslint-cli": "4.7.1",
     "react-a11y": "0.3.4",
-    "react-addons-test-utils": "15.6.0",
+    "react-addons-test-utils": "15.6.2",
     "react-transform-catch-errors": "1.0.2",
     "react-transform-hmr": "1.0.4",
     "redbox-react": "1.5.0",
-    "redux-devtools": "3.4.0",
-    "redux-devtools-dock-monitor": "1.1.2",
-    "redux-devtools-log-monitor": "1.3.0",
+    "redux-devtools": "3.4.1",
+    "redux-devtools-dock-monitor": "1.1.3",
+    "redux-devtools-log-monitor": "1.4.0",
     "webpack": "3.5.5",
     "webpack-dev-middleware": "1.12.0",
-    "webpack-hot-middleware": "2.18.2"
+    "webpack-hot-middleware": "2.21.2"
   }
 }
