--- a/package.json
+++ b/package.json
@@ -13,22 +13,23 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "@babel/core": "7.0.0-beta.49",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.49",
-    "@babel/plugin-proposal-export-default-from": "7.0.0-beta.49",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.49",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.49",
-    "@babel/plugin-transform-modules-commonjs": "7.0.0-beta.49",
-    "@babel/polyfill": "7.0.0-beta.49",
-    "@babel/preset-env": "7.0.0-beta.49",
-    "@babel/preset-react": "7.0.0-beta.49",
-    "@babel/register": "7.0.0-beta.49",
-    "@material-ui/core": "1.1.0",
+    "@babel/core": "7.0.0-beta.51",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.51",
+    "@babel/plugin-proposal-export-default-from": "7.0.0-beta.51",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.51",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.51",
+    "@babel/plugin-transform-modules-commonjs": "7.0.0-beta.51",
+    "@babel/polyfill": "7.0.0-beta.51",
+    "@babel/preset-env": "7.0.0-beta.51",
+    "@babel/preset-react": "7.0.0-beta.51",
+    "@babel/register": "7.0.0-beta.51",
+    "@material-ui/core": "1.2.1",
     "@material-ui/icons": "1.1.0",
-    "autoprefixer": "8.6.0",
+    "@material-ui/lab": "1.0.0-alpha.5",
+    "autoprefixer": "8.6.2",
     "babel-loader": "8.0.0-beta.2",
     "body-parser": "1.18.3",
-    "classnames": "2.2.5",
+    "classnames": "2.2.6",
     "compression": "1.7.2",
     "cors": "2.8.4",
     "cross-env": "5.1.6",
@@ -40,7 +41,7 @@
     "express-manifest-helpers": "0.5.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.11",
-    "hoist-non-react-statics": "2.5.0",
+    "hoist-non-react-statics": "2.5.4",
     "invariant": "2.2.4",
     "json-loader": "0.5.7",
     "lodash": "4.17.10",
@@ -59,7 +60,7 @@
     "postcss-import": "11.1.0",
     "postcss-loader": "2.1.5",
     "postcss-nested": "3.0.0",
-    "postcss-normalize": "4.0.0",
+    "postcss-normalize": "5.0.0",
     "pretty-error": "2.1.1",
     "prop-types": "15.6.1",
     "qs": "6.5.2",
@@ -68,19 +69,19 @@
     "react-event-listener": "0.6.0",
     "react-ga": "2.5.3",
     "react-helmet": "5.2.0",
-    "react-hot-loader": "4.2.0",
+    "react-hot-loader": "4.3.1",
     "react-inline-css": "2.3.1",
     "react-motion": "0.5.2",
     "react-redux": "5.0.7",
-    "react-router": "4.2.0",
+    "react-router": "4.3.1",
     "react-router-config": "1.0.0-beta.4",
-    "react-router-dom": "4.2.2",
+    "react-router-dom": "4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "4.0.0",
     "redux-connect": "7.0.0",
     "redux-responsive": "4.3.7",
     "redux-thunk": "2.3.0",
-    "sass-loader": "7.0.2",
+    "sass-loader": "7.0.3",
     "serialize-javascript": "1.5.0",
     "style-loader": "0.21.0",
     "superagent": "3.8.3",
@@ -100,10 +101,10 @@
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-prettier": "2.6.0",
-    "eslint-plugin-react": "7.8.2",
+    "eslint-plugin-react": "7.9.1",
     "node-sass": "4.9.0",
     "nodemon": "1.17.5",
-    "prettier": "1.13.4",
+    "prettier": "1.13.5",
     "prettier-eslint": "8.8.1",
     "prettier-eslint-cli": "4.7.1",
     "react-addons-test-utils": "15.6.2",
@@ -112,8 +113,8 @@
     "redux-devtools": "3.4.1",
     "redux-devtools-dock-monitor": "1.1.3",
     "redux-devtools-log-monitor": "1.4.0",
-    "webpack": "4.10.2",
-    "webpack-cli": "3.0.1",
+    "webpack": "4.12.0",
+    "webpack-cli": "3.0.4",
     "webpack-dev-middleware": "3.1.3",
     "webpack-hot-middleware": "2.22.2"
   }
