--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "@babel/core": "7.0.0-beta.54",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.54",
-    "@babel/plugin-proposal-export-default-from": "7.0.0-beta.54",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.54",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.54",
-    "@babel/plugin-transform-modules-commonjs": "7.0.0-beta.54",
-    "@babel/polyfill": "7.0.0-beta.54",
-    "@babel/preset-env": "7.0.0-beta.54",
-    "@babel/preset-react": "7.0.0-beta.54",
-    "@babel/register": "7.0.0-beta.54",
-    "@material-ui/core": "1.4.1",
-    "@material-ui/icons": "2.0.0",
-    "@material-ui/lab": "1.0.0-alpha.7",
-    "autoprefixer": "9.0.1",
+    "@babel/core": "7.0.0-beta.56",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.56",
+    "@babel/plugin-proposal-export-default-from": "7.0.0-beta.56",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.56",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.56",
+    "@babel/plugin-transform-modules-commonjs": "7.0.0-beta.56",
+    "@babel/polyfill": "7.0.0-beta.56",
+    "@babel/preset-env": "7.0.0-beta.56",
+    "@babel/preset-react": "7.0.0-beta.56",
+    "@babel/register": "7.0.0-beta.56",
+    "@material-ui/core": "1.4.3",
+    "@material-ui/icons": "2.0.1",
+    "@material-ui/lab": "1.0.0-alpha.9",
+    "autoprefixer": "9.1.0",
     "babel-loader": "8.0.0-beta.2",
     "body-parser": "1.18.3",
     "classnames": "2.2.6",
@@ -41,7 +41,7 @@
     "express-manifest-helpers": "0.5.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.11",
-    "hoist-non-react-statics": "3.0.0",
+    "hoist-non-react-statics": "3.0.1",
     "invariant": "2.2.4",
     "json-loader": "0.5.7",
     "lodash": "4.17.10",
@@ -56,17 +56,17 @@
     "polished": "1.9.3",
     "postcss-assets": "5.0.0",
     "postcss-custom-properties": "7.0.0",
-    "postcss-flexbugs-fixes": "4.0.0",
-    "postcss-import": "11.1.0",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-import": "12.0.0",
     "postcss-loader": "2.1.6",
     "postcss-nested": "3.0.0",
     "postcss-normalize": "6.0.0",
     "pretty-error": "2.1.1",
     "prop-types": "15.6.2",
     "qs": "6.5.2",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
-    "react-event-listener": "0.6.1",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "react-event-listener": "0.6.2",
     "react-ga": "2.5.3",
     "react-helmet": "5.2.0",
     "react-hot-loader": "4.3.4",
@@ -76,12 +76,12 @@
     "react-router": "4.3.1",
     "react-router-config": "1.0.0-beta.4",
     "react-router-dom": "4.3.1",
-    "react-router-redux": "^5.0.0-alpha.9",
+    "react-router-redux": "5.0.0-alpha.9",
     "redux": "4.0.0",
-    "redux-connect": "7.0.0",
+    "redux-connect": "8.0.0",
     "redux-responsive": "4.3.8",
     "redux-thunk": "2.3.0",
-    "sass-loader": "7.0.3",
+    "sass-loader": "7.1.0",
     "serialize-javascript": "1.5.0",
     "style-loader": "0.21.0",
     "superagent": "3.8.3",
@@ -94,7 +94,7 @@
   "devDependencies": {
     "babel-eslint": "8.2.6",
     "bootstrap-sass": "3.3.7",
-    "eslint": "5.2.0",
+    "eslint": "5.3.0",
     "eslint-config-react-app": "2.1.0",
     "eslint-loader": "2.1.0",
     "eslint-plugin-flowtype": "2.50.0",
@@ -104,7 +104,7 @@
     "eslint-plugin-react": "7.10.0",
     "node-sass": "4.9.2",
     "nodemon": "1.18.3",
-    "prettier": "1.13.7",
+    "prettier": "1.14.0",
     "prettier-eslint": "8.8.2",
     "prettier-eslint-cli": "4.7.1",
     "react-addons-test-utils": "15.6.2",
@@ -113,7 +113,7 @@
     "redux-devtools": "3.4.1",
     "redux-devtools-dock-monitor": "1.1.3",
     "redux-devtools-log-monitor": "1.4.0",
-    "webpack": "4.16.3",
+    "webpack": "4.16.5",
     "webpack-cli": "3.1.0",
     "webpack-dev-middleware": "3.1.3",
     "webpack-hot-middleware": "2.22.3"
