--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "compression": "1.7.3",
     "cors": "2.8.4",
     "cross-env": "5.2.0",
-    "css-hot-loader": "1.4.1",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "exenv": "1.2.2",
     "express": "4.16.3",
     "express-manifest-helpers": "0.5.0",
+    "extract-css-chunks-webpack-plugin": "3.0.11",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.11",
     "hoist-non-react-statics": "3.0.1",
@@ -48,7 +48,6 @@
     "lru-memoize": "1.0.2",
     "map-props": "1.0.0",
     "md5": "2.2.1",
-    "mini-css-extract-plugin": "0.4.1",
     "moment": "2.22.2",
     "multireducer": "3.1.2",
     "normalizr": "3.2.4",
