--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "@babel/core": "7.0.0-beta.56",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.56",
-    "@babel/plugin-proposal-export-default-from": "7.0.0-beta.56",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.56",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.56",
-    "@babel/plugin-transform-modules-commonjs": "7.0.0-beta.56",
-    "@babel/polyfill": "7.0.0-beta.56",
-    "@babel/preset-env": "7.0.0-beta.56",
-    "@babel/preset-react": "7.0.0-beta.56",
-    "@babel/register": "7.0.0-beta.56",
-    "@material-ui/core": "1.4.3",
-    "@material-ui/icons": "2.0.1",
-    "@material-ui/lab": "1.0.0-alpha.9",
-    "autoprefixer": "9.1.0",
-    "babel-loader": "8.0.0-beta.2",
+    "@babel/core": "7.0.1",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-export-default-from": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-transform-modules-commonjs": "7.0.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/register": "7.0.0",
+    "@material-ui/core": "3.1.0",
+    "@material-ui/icons": "3.0.1",
+    "@material-ui/lab": "3.0.0-alpha.16",
+    "autoprefixer": "9.1.5",
+    "babel-loader": "8.0.2",
     "body-parser": "1.18.3",
     "classnames": "2.2.6",
     "compression": "1.7.3",
@@ -38,13 +38,13 @@
     "exenv": "1.2.2",
     "express": "4.16.3",
     "express-manifest-helpers": "0.5.0",
-    "extract-css-chunks-webpack-plugin": "3.0.11",
+    "extract-css-chunks-webpack-plugin": "3.1.1",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.11",
+    "file-loader": "2.0.0",
     "hoist-non-react-statics": "3.0.1",
     "invariant": "2.2.4",
     "json-loader": "0.5.7",
-    "lodash": "4.17.10",
+    "lodash": "4.17.11",
     "lru-memoize": "1.0.2",
     "map-props": "1.0.0",
     "md5": "2.2.1",
@@ -52,23 +52,23 @@
     "multireducer": "3.1.2",
     "normalizr": "3.2.4",
     "piping": "1.0.0-rc.4",
-    "polished": "1.9.3",
+    "polished": "2.0.3",
     "postcss-assets": "5.0.0",
-    "postcss-custom-properties": "7.0.0",
+    "postcss-custom-properties": "8.0.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-import": "12.0.0",
-    "postcss-loader": "2.1.6",
-    "postcss-nested": "3.0.0",
-    "postcss-normalize": "6.0.0",
+    "postcss-loader": "3.0.0",
+    "postcss-nested": "4.1.0",
+    "postcss-normalize": "7.0.1",
     "pretty-error": "2.1.1",
     "prop-types": "15.6.2",
     "qs": "6.5.2",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
-    "react-event-listener": "0.6.2",
+    "react": "16.5.1",
+    "react-dom": "16.5.1",
+    "react-event-listener": "0.6.3",
     "react-ga": "2.5.3",
     "react-helmet": "5.2.0",
-    "react-hot-loader": "4.3.4",
+    "react-hot-loader": "4.3.8",
     "react-inline-css": "2.3.1",
     "react-motion": "0.5.2",
     "react-redux": "5.0.7",
@@ -82,28 +82,28 @@
     "redux-thunk": "2.3.0",
     "sass-loader": "7.1.0",
     "serialize-javascript": "1.5.0",
-    "style-loader": "0.21.0",
+    "style-loader": "0.23.0",
     "superagent": "3.8.3",
-    "url-loader": "1.0.1",
-    "url-search-params-polyfill": "4.0.1",
-    "webpack-manifest-plugin": "2.0.3",
+    "url-loader": "1.1.1",
+    "url-search-params-polyfill": "5.0.0",
+    "webpack-manifest-plugin": "2.0.4",
     "webpack-node-externals": "1.7.2",
-    "write-file-webpack-plugin": "4.3.2"
+    "write-file-webpack-plugin": "4.4.0"
   },
   "devDependencies": {
-    "babel-eslint": "8.2.6",
+    "babel-eslint": "9.0.0",
     "bootstrap-sass": "3.3.7",
-    "eslint": "5.3.0",
+    "eslint": "5.6.0",
     "eslint-config-react-app": "2.1.0",
     "eslint-loader": "2.1.0",
     "eslint-plugin-flowtype": "2.50.0",
-    "eslint-plugin-import": "2.13.0",
+    "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-prettier": "2.6.2",
-    "eslint-plugin-react": "7.10.0",
-    "node-sass": "4.9.2",
-    "nodemon": "1.18.3",
-    "prettier": "1.14.0",
+    "eslint-plugin-react": "7.11.1",
+    "node-sass": "4.9.3",
+    "nodemon": "1.18.4",
+    "prettier": "1.14.2",
     "prettier-eslint": "8.8.2",
     "prettier-eslint-cli": "4.7.1",
     "react-addons-test-utils": "15.6.2",
@@ -112,9 +112,9 @@
     "redux-devtools": "3.4.1",
     "redux-devtools-dock-monitor": "1.1.3",
     "redux-devtools-log-monitor": "1.4.0",
-    "webpack": "4.16.5",
+    "webpack": "4.19.0",
     "webpack-cli": "3.1.0",
-    "webpack-dev-middleware": "3.1.3",
-    "webpack-hot-middleware": "2.22.3"
+    "webpack-dev-middleware": "3.3.0",
+    "webpack-hot-middleware": "2.24.0"
   }
 }
