--- a/package.json
+++ b/package.json
@@ -104,6 +104,8 @@
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-prettier": "2.7.0",
     "eslint-plugin-react": "7.11.1",
+    "husky": "1.1.1",
+    "lint-staged": "7.3.0",
     "node-sass": "4.9.3",
     "nodemon": "1.18.4",
     "prettier": "1.14.3",
@@ -118,5 +120,22 @@
     "webpack-cli": "3.1.1",
     "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.24.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier-eslint --write",
+      "eslint",
+      "git add"
+    ],
+    "*.{json,md,css,scc}": [
+      "prettier-eslint --write",
+      "prettier-eslint --list-different",
+      "git add"
+    ]
   }
 }
