--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-export-default-from"
