--- a/package.json
+++ b/package.json
@@ -118,9 +118,11 @@
     "redux-devtools": "3.4.1",
     "redux-devtools-dock-monitor": "1.1.3",
     "redux-devtools-log-monitor": "1.4.0",
+    "tinycolor2": "1.4.1",
     "webpack-cli": "3.1.2",
     "webpack-dev-middleware": "3.4.0",
-    "webpack-hot-middleware": "2.24.2"
+    "webpack-hot-middleware": "2.24.2",
+    "yargs": "12.0.2"
   },
   "husky": {
     "hooks": {
