--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "redux": "4.0.0",
     "redux-connect": "8.0.0",
     "redux-thunk": "2.3.0",
+    "replace-in-file-webpack-plugin": "1.0.6",
     "sass-loader": "7.1.0",
     "serialize-javascript": "1.5.0",
     "style-loader": "0.23.0",
