--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "2.8.4",
     "cross-env": "5.2.0",
     "css-loader": "1.0.0",
+    "date-fns": "1.29.0",
     "dotenv": "6.0.0",
     "exenv": "1.2.2",
     "express": "4.16.3",
@@ -50,7 +51,6 @@
     "lru-memoize": "1.0.2",
     "map-props": "1.0.0",
     "md5": "2.2.1",
-    "moment": "2.22.2",
     "multireducer": "3.1.2",
     "normalizr": "3.2.4",
     "piping": "1.0.0-rc.4",
