--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "redux-devtools-log-monitor": "1.4.0",
     "rimraf": "2.6.2",
     "tinycolor2": "1.4.1",
+    "webpack-bundle-analyzer": "3.0.2",
     "webpack-cli": "3.1.2",
     "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.24.2",
