--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "redux-devtools": "3.4.1",
     "redux-devtools-dock-monitor": "1.1.3",
     "redux-devtools-log-monitor": "1.4.0",
+    "rimraf": "2.6.2",
     "tinycolor2": "1.4.1",
     "webpack-cli": "3.1.2",
     "webpack-dev-middleware": "3.4.0",
