--- a/package.json
+++ b/package.json
@@ -138,11 +138,13 @@
   "lint-staged": {
     "*.js": [
       "prettier-eslint --write",
-      "eslint"
+      "eslint",
+      "git add"
     ],
     "*.{json,md,css,scc}": [
       "prettier-eslint --write",
-      "prettier-eslint --list-different"
+      "prettier-eslint --list-different",
+      "git add"
     ]
   }
 }
