--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "cross-env NODE_ENV=development node scripts/start.js",
     "lint": "eslint --cache src webpack scripts",
     "format": "prettier-eslint --write '{src,webpack,scripts}/**/*.{js,json,scss,md}'",
-    "postinstall": "npm rebuild node-sass",
+    "postinstall": "npm rebuild node-sass && node ./scripts/replaceBreakpoints",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
@@ -85,7 +85,6 @@
     "redux": "4.0.1",
     "redux-connect": "8.0.0",
     "redux-thunk": "2.3.0",
-    "replace-in-file-webpack-plugin": "1.0.6",
     "rimraf": "2.6.2",
     "sass-loader": "7.1.0",
     "serialize-javascript": "1.5.0",
