--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-proposal-decorators": "7.1.2",
     "@babel/plugin-proposal-export-default-from": "7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-syntax-decorators": "7.1.0",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/plugin-transform-modules-commonjs": "7.1.0",
     "@babel/polyfill": "7.0.0",
@@ -77,6 +78,7 @@
     "react-lazyload": "2.3.0",
     "react-loadable": "5.5.0",
     "react-motion": "0.5.2",
+    "react-plx": "1.3.9",
     "react-redux": "5.0.7",
     "react-router": "4.3.1",
     "react-router-config": "1.0.0-beta.4",
