--- a/package.json
+++ b/package.json
@@ -78,12 +78,12 @@
     "react-lazyload": "2.3.0",
     "react-loadable": "5.5.0",
     "react-motion": "0.5.2",
-    "react-plx": "1.3.9",
     "react-redux": "5.0.7",
     "react-router": "4.3.1",
     "react-router-config": "1.0.0-beta.4",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
+    "react-scroll-parallax": "1.3.5",
     "redux": "4.0.1",
     "redux-connect": "8.0.0",
     "redux-thunk": "2.3.0",
