--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-proposal-decorators": "7.1.2",
     "@babel/plugin-proposal-export-default-from": "7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-syntax-decorators": "7.1.0",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/plugin-transform-modules-commonjs": "7.1.0",
     "@babel/polyfill": "7.0.0",
@@ -82,6 +83,7 @@
     "react-router-config": "1.0.0-beta.4",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
+    "react-scroll-parallax": "1.3.5",
     "redux": "4.0.1",
     "redux-connect": "8.0.0",
     "redux-thunk": "2.3.0",
