--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
     "react-scroll-parallax": "1.3.5",
+    "react-use-localstorage": "3.1.0",
     "redux": "4.0.1",
     "redux-connect": "8.0.0",
     "redux-thunk": "2.3.0",
