--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "pretty-error": "2.1.1",
     "prop-types": "15.6.2",
     "qs": "6.6.0",
-    "react": "16.6.3",
-    "react-dom": "16.6.3",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-event-listener": "0.6.4",
     "react-ga": "2.5.6",
     "react-helmet": "5.2.0",
@@ -83,6 +83,7 @@
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
     "react-scroll-parallax": "1.3.5",
+    "react-use-localstorage": "3.1.0",
     "redux": "4.0.1",
     "redux-connect": "8.0.0",
     "redux-thunk": "2.3.0",
