--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,12 @@
         "requiredFirst": false,
         "sortShapeProp": true
       }
+    ],
+    "react/jsx-props-no-spreading": [
+      "error",
+      {
+        "custom": "ignore"
+      }
     ]
   },
   "globals": {
