--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
     "@material-ui/lab": "3.0.0-alpha.30",
-    "autoprefixer": "9.4.2",
+    "autoprefixer": "9.7.0",
     "babel-loader": "8.0.6",
-    "body-parser": "1.18.3",
+    "body-parser": "1.19.0",
     "chalk": "2.4.2",
     "classnames": "2.2.6",
     "compression": "1.7.4",
     "cors": "2.8.5",
     "cross-env": "5.2.0",
     "css-loader": "2.0.0",
-    "date-fns": "1.30.1",
+    "date-fns": "2.6.0",
     "dotenv": "6.2.0",
     "exenv": "1.2.2",
     "express": "4.16.4",
@@ -131,6 +131,11 @@
     "webpack-hot-middleware": "2.25.0",
     "yargs": "14.2.0"
   },
+  "browserslist": [
+    "last 3 versions",
+    "ie >= 9",
+    "Edge <= 15"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
