--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "webpack": "4.27.1",
     "webpack-manifest-plugin": "2.0.4",
     "webpack-node-externals": "1.7.2",
-    "write-file-webpack-plugin": "4.5.0"
+    "write-file-webpack-plugin": "4.5.0",
+    "ytdl-core": "2.1.7"
   },
   "devDependencies": {
     "babel-eslint": "10.0.1",
