--- a/package.json
+++ b/package.json
@@ -96,11 +96,11 @@
     "webpack": "4.27.1",
     "webpack-manifest-plugin": "2.0.4",
     "webpack-node-externals": "1.7.2",
-    "write-file-webpack-plugin": "4.5.0",
-    "ytdl-core": "2.1.7"
+    "write-file-webpack-plugin": "4.5.0"
   },
   "devDependencies": {
     "babel-eslint": "10.0.1",
+    "babel-jest": "26.0.1",
     "cypress": "3.5.0",
     "eslint": "5.10.0",
     "eslint-config-airbnb": "17.1.0",
@@ -112,6 +112,7 @@
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
     "husky": "1.2.0",
+    "jest": "26.0.1",
     "lint-staged": "8.1.0",
     "nodemon": "1.18.8",
     "prettier": "1.15.3",
